--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,44 +2,26 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "setup (functions)",
-			"type": "shell",
-			"command": "python",
-			"args": [
-				"-m",
-				"venv",
-				".venv"
-			],
-			"problemMatcher": []
-		},
-		{
-			"label": "install dependencies (functions)",
-			"type": "shell",
-			"command": "pip",
-			"args": [
-				"install",
-				"-r",
-				"requirements.txt"
-			],
-			"options": {
-				"cwd": "${workspaceFolder}"
-			},
-			"dependsOn": "setup (functions)",
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"problemMatcher": []
-		},
-		{
 			"type": "func",
+			"label": "func: host start",
 			"command": "host start",
-			"options": {
-				"cwd": "${workspaceFolder}"
-			},
+			"problemMatcher": "$func-python-watch",
 			"isBackground": true,
-			"dependsOn": "install dependencies (functions)",
-			"problemMatcher": "$func-python-watch"
+			"dependsOn": "pip install (functions)"
+		},
+		{
+			"label": "pip install (functions)",
+			"type": "shell",
+			"osx": {
+				"command": "${config:azureFunctions.pythonVenv}/bin/python -m pip install -r requirements.txt"
+			},
+			"windows": {
+				"command": "${config:azureFunctions.pythonVenv}/Scripts/python -m pip install -r requirements.txt"
+			},
+			"linux": {
+				"command": "${config:azureFunctions.pythonVenv}/bin/python -m pip install -r requirements.txt"
+			},
+			"problemMatcher": []
 		}
 	]
 }
